# ww_project

./: README.md  docker-compose.yml  pyproject.toml
bot/: Dockerfile  run.py
bot/app/: States.py  db_client.py  hand.py  keyboards.py
db/: db.py  init.sql
db_api/: Dockerfile  config.py  db_api.py  server.py
web/: Dockerfile  main.py  st.py
worker/: main.py
