[project]
name = "py-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standart] (>=0.38.0,<0.39.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "spotipy (>=2.25.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "py"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
